syntax = "proto3";

package logspb;

service LogsService {
    rpc GetLogs (GetLogsRequest) returns (GetLogsReply) {}
}

message Logs {
    string task_name = 1;
    string command = 2;
    string error  = 3;
    string output = 4;
    int64 plan_time = 5;
    int64 schedule_time = 6;
    int64 start_time = 7;
    int64 end_time = 8;
}


message GetLogsRequest {
    string token = 1;
    int64 start = 2;
    int64 after = 3;
    int32 page_number = 4;
    int32 result_per_page = 5;
    string field = 6;
}

message GetLogsReply {
    int32 error_number = 1;
    string msg = 2;
    repeated Logs logs = 3;
}